compoze Changelog
=================

Unreleased
----------

- Added support for Python 3.2 and 3.3, including testing them under ``tox``.

- Added support for PyPy, including testing it under ``tox``.

- Added coverage testing for under ``tox``.

- Added testing for supported Python versions under ``tox``.

- Added logic to handle archives (e.g., Twisted's) which contain multiple
  'setup.py' files.  Thanks to Travis Jensen for the patch.

- Added 'setup.py dev' alias (installs 'nose' and 'coverage' after running
  'setup.py develop').

compoze 0.4.1.1 (2012-04-19)
----------------------------

- Repair packaging error in 0.4.1 (CHANGES.txt not included in the tarball).

compoze 0.4.1 (2012-03-18)
--------------------------

- Harden 'compoze.indexer' against archives containing 'setup.py' which
  exit with errors, or which return bad data for 'setup.py --name --version'.
  Fixes http://bugs.repoze.org/issue69:  thanks to Paul Winkler for the
  original version of the patch.


compoze 0.4 (2010-03-29)
------------------------

- Added global ``--use-versions`` and ``--versions-section`` options, to
  permit specifying requirements from the configuration file.  Updated
  ``compoze fetch`` and ``compoze show`` to use such requirements.

- Normalized options, allowing more to be set globally or in the config
  file:  ``--index-url``, ``--find-links``, ``--fetch-site-packages``,
  ``--include-binary-eggs``, ``--keep-tempdir``.

- Updated spelling of ``--find-link`` option to ``--find-links``.

- Added a global ``--config-file`` option to permit setting options in an
  INI-style config file.


compoze 0.3.1 (2010-03-25)
--------------------------

- Fix bug in ``compoze fetch`` under recent setuptools:
  "AttributeError: NoneType has no attribute 'clone'".

- Fix bug in ``compoze show`` under recent setuptools:
  "AttributeError: EmptyProvider instance has no attribute 'name'".

- Further documentation improvements.


compoze 0.3 (2010-03-25)
------------------------
