@@ -1,7 +1,7 @@
 [tox]
 envlist = 
 #    py26,py27,py32,py33,pypy,cover
-    py26,py27,pypy,py32,py33,coverage
+    py26,py27,pypy,py32,py33,coverage,docs
 
 [testenv]
 commands = 
@@ -18,6 +18,15 @@ deps =
     nose
     coverage<3.6b2
     nosexcover
+
+[testenv:docs]
+basepython =
+    python2.6
+commands = 
+    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
+deps =
+    Sphinx
 
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
